--------------------
Bazaar Release Notes
--------------------

.. contents::

bzr 1.7rc2 IN DEVELOPMENT
-------------------------

  BUG FIXES:

    * Fix '_in_buffer' AttributeError when using the -Dhpss debug flag.
      (Andrew Bennetts)

    * ``bzr branch bzr+ssh://`` will properly preserve the format when
      branching from a non-default format. (Andrew Bennetts)


bzr 1.7rc1 2008-09-09
---------------------

This release candidate for bzr 1.7 has several bug fixes and a few
performance and feature improvements.  ``bzr rm`` will now scan for
missing files and remove them, like how ``bzr add`` scans for unknown
files and adds them. A bit more polish has been applied to the stacking
code. The b-tree indexing code has been brought in, with an eye on using
it in a future repository format.


  CHANGES:

    * ``bzr export`` can now export a subdirectory of a project.
      (Robert Collins)

    * ``bzr rm`` will now scan for files that are missing and remove just
      them automatically, much as ``bzr add`` scans for new files that
      are not ignored and adds them automatically. (Robert Collins)

  FEATURES

    * Support for GSSAPI authentication when using FTP as documented in 
      RFC2228. (Jelmer Vernooij, #49623)

  IMPROVEMENTS:

    * A url like ``log+file:///tmp`` will log all access to that Transport 
      to ``.bzr.log``, which may help in debugging or profiling.
      (Martin Pool)

    * ``bzr branch`` and ``bzr push`` use the default stacking policy if the
      branch format supports it. (Aaron Bentley)

    * ``bzr init`` and ``bzr init-repo`` will now print out the same as
      ``bzr info`` if it completed successfully.
      (Marius Kruger)

    * ``bzr uncommit`` logs the old tip revision id, and displays how to
      restore the branch to that tip using ``bzr pull``.  This allows you
      to recover if you realize you uncommitted the wrong thing.
      (John Arbash Meinel)
